--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,9 @@
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-/*-----------------------------------------------------------------NAVBAR CSS-----------------------------------------------------*/
 .container-nav{
     background-color: rgb(78, 77, 77);
+    
 }
 .container-navlink{
    font-size: 1.2em;
@@ -29,8 +29,7 @@
     padding: 0 !important;
     margin: 1vh !important;
 }
-/*------------------------------------------------NAVBAR MEDIAQUERY'S-------------------------------------------------------------------*/
-/*-------------992PX---------------------*/
+
 @media (max-width: 992px){
     .container-fluid{
         display: flex;
@@ -59,8 +58,8 @@
       .navbar-nav{
         flex-direction: row !important;
       }
+
 }
-/*-------------992PX|1200PX---------------------*/
 @media (min-width: 992px) and (max-width: 1200px){
     .container-fluid .navbar-brand{
         justify-content: flex-start;
@@ -89,15 +88,19 @@
         flex-direction: row !important;
       }
 }
-/*----------------------------------------------Seccion principal de informacion sobre la conferencia CSS---------------------------------------------------------------*/
+
+
+
 .Container-main{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/ba1.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/hawaii.jpg);
+    
     height: 80vh;
     background-size:cover;
     background-repeat: no-repeat;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    
 }
 
 .Container-princ{
@@ -109,6 +112,7 @@
     padding-right: 5vw;
 }
 .container-buttons{
+  
     display: flex;
     justify-content: flex-end;    
 }
@@ -121,10 +125,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    
+   
 }
-/*---------------------------------Seccion principal de informacion sobre la conferencia QUERYS--------------------------------------------*/
-/*------576PX--------*/
-@media (max-width: 576px){
+
+@media (max-width: 575.98px){
     .Container-princ{
         font-size: 1em;
     }
@@ -135,7 +140,6 @@
         width: 50vw;
     }
 }
-/*------576PX|768PX--------*/
 @media (min-width: 577px) and (max-width: 768px){
     .Container-princ{
         font-size: 1em;
@@ -149,7 +153,6 @@
         font-size: .8em;
     }
 }
-/*------769PX|992PX--------*/
 @media (min-width: 769px) and (max-width: 992px){
     .Container-princ{
         font-size: 1.2em;
@@ -163,7 +166,6 @@
         font-size: .8em;
     }
 }
-/*------992PX|1200PX--------*/
 @media (min-width: 992px) and (max-width: 1200px){
     .Container-princ{
         font-size: 1em;
@@ -174,7 +176,6 @@
         font-size: .8em;
     }
 }
-/*---------------------------------------------Seccion sobre los oradores de la conferencia CSS-----------------------------------------------------*/
 .Container-imgs{
     display: flex;
     flex-direction: column;
@@ -184,6 +185,7 @@
     flex-direction: row;
     justify-content: center;
     padding-bottom: 5vh;
+
 }
 .Container-midlabel h2{
     padding-top: 10px;
@@ -191,6 +193,7 @@
 }
 .Container-img1{
     width: 50vh;
+    
 }
 .Container-JR .Sj-p1{
     background-color: rgb(255, 230, 0);
@@ -229,6 +232,7 @@
 
 .Container-img3 {
     width: 50vh;
+    
 }
 .Container-img3 .p3{
     padding-left: 3vh;
@@ -249,26 +253,99 @@
     margin-left: 1vh;
     background-color: rgb(141, 15, 15);
 }
-/*------------------------------------Seccion sobre los oradores de la conferencia QUERYS--------------------------------*/
+
 @media (max-width: 575.98px){
-    .Container-JR{
-        padding: 0;
+    .Container-info{
         flex-direction: column;
-        width: 80%;
     }
-    .Sj-p1{
-    margin-left: 1vw;
+    .Img-fondo{
+        width: 100% !important;
     }
-    .Bg-p1{
-        margin-left: 1vw;
-        }
-    .p1{
-            margin-left: 1vw;
-            }
+    .Info-img{
+        margin: 0 !important;
+        padding: 0;
+        justify-content: center;
+        text-align: center;
+        font-size: .7em;
+    }
+    .Info-img .btn{
+
+        width: 30vw !important;
+        margin-bottom: 2vh;
+        text-align: center;
+    }
 }
-/*---------------------------------------------------------SECCION DE INFORMACION GEOGRAFICA CSS-------------------------------------------------------------*/
+@media (min-width: 577px) and (max-width: 768px){
+    .Container-info{
+        flex-direction: column;
+    
+    }
+    .Img-fondo{
+        width: 100% !important;
+    }
+    .Info-img{
+        display: flex;
+        flex-direction: column;
+        margin: 0 !important;
+        padding-right: 4vw;
+        justify-content: center;
+        text-align: center;
+        font-size: .7em;
+    }
+    .Info-img .btn{
+
+        width: 30vw !important;
+        margin-bottom: 2vh;
+        text-align: center;
+    }
+}
+@media (min-width: 769px) and (max-width: 992px){
+    .Container-info{
+        flex-direction: column;
+    
+    }
+    .Img-fondo{
+        width: 100% !important;
+    }
+    .Info-img{
+        display: flex;
+        flex-direction: column;
+        margin: 0 !important;
+        padding-right: 4vw;
+        justify-content: center;
+        text-align: center;
+        font-size: 1em;
+    }
+    .Info-img .btn{
+
+        width: 30vw !important;
+        margin-bottom: 2vh;
+        text-align: center;
+    }
+}
+@media (min-width: 992px) and (max-width: 1200px){
+    
+    .Img-fondo img{
+       height: 100%;
+    }
+    .Info-img{
+        padding-right: 4vw;
+        justify-content: flex-start;
+        font-size: .8em;
+    }
+    .Info-img button{
+
+        width: 10vw !important ;
+        margin-bottom: 2vh;
+        text-align: center;
+        font-size: 1em;
+    }
+}
+
 .Container-info{
    display: flex;
+   
+   
 }
 .Container-info img{
     width: 100%;
@@ -296,213 +373,25 @@
     width: 8vw;
     height: 8vh; 
 }
-/*------------------------------------SECCION DE INFORMACION GEOGRAFICA QUERYS-------------------------------------*/
-/*----------576PX------------------*/
-@media (max-width: 576px){
-    .Container-info{
-        flex-direction: column;
-    }
-    .Img-fondo{
-        width: 100% !important;
-    }
-    .Info-img{
-        margin: 0 !important;
+
+@media (max-width: 575.98px){
+    .Container-JR{
         padding: 0;
-        justify-content: center;
-        text-align: center;
-        font-size: .7em;
-    }
-    .Info-img .btn{
-        width: 30vw !important;
-        margin-bottom: 2vh;
-        text-align: center;
-    }
-}
-/*----------576PX|768PX------------------*/
-@media (min-width: 577px) and (max-width: 768px){
-    .Container-info{
         flex-direction: column;
+        width: 80%;
     }
-    .Img-fondo{
-        width: 100% !important;
+    .Sj-p1{
+    margin-left: 1vw;
     }
-    .Info-img{
-        display: flex;
-        flex-direction: column;
-        margin: 0 !important;
-        padding-right: 4vw;
-        justify-content: center;
-        text-align: center;
-        font-size: .7em;
-    }
-    .Info-img .btn{
-        width: 30vw !important;
-        margin-bottom: 2vh;
-        text-align: center;
-    }
-}
-/*----------768PX|992PX------------------*/
-@media (min-width: 769px) and (max-width: 992px){
-    .Container-info{
-        flex-direction: column;
-    }
-    .Img-fondo{
-        width: 100% !important;
-    }
-    .Info-img{
-        display: flex;
-        flex-direction: column;
-        margin: 0 !important;
-        padding-right: 4vw;
-        justify-content: center;
-        text-align: center;
-        font-size: 1em;
-    }
-    .Info-img .btn{
-        width: 30vw !important;
-        margin-bottom: 2vh;
-        text-align: center;
-    }
-}
-/*----------992PX|1200PX------------------*/
-@media (min-width: 992px) and (max-width: 1200px){
-    .Img-fondo img{
-       height: 100%;
-    }
-    .Info-img{
-        padding-right: 4vw;
-        justify-content: flex-start;
-        font-size: .8em;
-    }
-    .Info-img button{
-        width: 10vw !important ;
-        margin-bottom: 2vh;
-        text-align: center;
-        font-size: 1em;
-    }
-}
-/*------------------------------------------------FORM DE CONTACTO CSS------------------------------------------------------------------*/
-
-.container-contact2 {
-    width: 100%;
-    min-height: 100vh;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    }
-
-.wrap-contact2 {
-    width: 790px;
-    background: #fff;
-    border-radius: 10px;
-    overflow: hidden;
-    padding: 72px 55px 90px
-}
-.span2{
-    display: flex;
-    justify-content: center;
-    padding-bottom: 1vh;
+    .Bg-p1{
+        margin-left: 1vw;
+        }
+    .p1{
+            margin-left: 1vw;
+            }
 }
 
-.contact2-form {
-    width: 100%;
-}
-.container-contact2-title{
-    display: flex;
-     flex-direction: column;
-     justify-content: center;
-     text-align: center;
-     padding-bottom: 3vh;
-     font-size: 2em;
-}
 
-.contact2-form-title {
-    font-family: Poppins-Bold;
-    font-size: .5em;
-    color: #333;   
-    text-align: center;
-}
-.contact2-form-title2{
-font-size: 1.5em;
-}
-.container-nya{
-    display: flex;
-}
-.validate-input1{
-    margin-right: 1vw;
-}
-.validate-input3{
-margin-bottom: 10px !important;
-}
-
-.wrap-input2 {
-    width: 100%;
-    margin-bottom: 37px
-}
-
-.input2 {
-    display: block;
-    width: 100%;
-    font-family: Poppins-Regular;
-    font-size: 15px;
-    border-color: #d4cece;
-    border-width: 1px;
-    border-style: solid;
-}
-
-input.input2 {
-    height: 45px
-}
-
-textarea.input2 {
-    min-height: 115px;
-    padding-top: 13px;
-    padding-bottom: 13px;
-}
-.wrap-input2 .input2::placeholder {
-    padding: 5px; /* Ajusta el padding del placeholder dentro del textarea */
-    color: #999;
-  }
-
-.container-contact2-form-btn {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 13px
-}
-
-.wrap-contact2-form-btn {
-    display: block;
-    position: relative;
-    z-index: 1;
-    border-radius: 2px;
-    width: 100%;
-    overflow: hidden;
-    margin: 0 auto
-}
-
-.contact2-form-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50px;
-    font-size: 16px;
-    background-color: #8dd14d;
-    color: white;
-    border-width: 0;
-}
-
-.validate-input {
-    position: relative
-}
-/*------------------------------------------FORM DE CONTACTO QUERYS-----------------------------*/
 @media (max-width: 575.98px){
     .wrap-contact2 {
         padding:72px 15px 90px
@@ -535,30 +424,144 @@ textarea.input2 {
         border-width: 0;
     } 
 }
-/*------------------------------------------------FOOTER---------------------------------------------------------------------*/
 
-.container-footer{
- background-color: #194b79;
- }
 
-.links-footer{
-    height: 15vh;
+.container-contact2 {
+    width: 100%;
+    min-height: 100vh;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
-    text-align: center;   
+    padding: 15px;
+    }
+
+.wrap-contact2 {
+    width: 790px;
+    background: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 72px 55px 90px
 }
-.a-links{
+.span2{
     display: flex;
-    justify-content: space-evenly;
-    padding-left: 2vw;
-    padding-right: 2vw;
+    justify-content: center;
+    padding-bottom: 1vh;
+
 }
-.a-links a{
-    text-decoration: none;
-    color: #fff;
+
+.contact2-form {
+    width: 100%;
+  
 }
-/*-----------------------------------------FOOTER QUERYS-------------------------------------------------------------*/
-/*----------576PX----------------*/
+.container-contact2-title{
+    display: flex;
+     flex-direction: column;
+     justify-content: center;
+     text-align: center;
+     padding-bottom: 3vh;
+     font-size: 2em;
+
+}
+
+.contact2-form-title {
+    font-family: Poppins-Bold;
+    font-size: .5em;
+    color: #262626;
+    
+    text-align: center;
+}
+.contact2-form-title2{
+font-size: 1.5em;
+}
+.container-nya{
+    display: flex;
+    
+}
+.validate-input1{
+    margin-right: 1vw;
+    
+}
+.validate-input3{
+margin-bottom: 10px !important;
+}
+
+.wrap-input2 {
+    width: 100%;
+
+    margin-bottom: 37px
+}
+
+.input2 {
+    display: block;
+    width: 100%;
+    font-family: Poppins-Regular;
+    font-size: 15px;
+    border-color: #d4cece;
+    border-width: 1px;
+    border-style: solid;
+
+    
+}
+
+input.input2 {
+    height: 45px
+}
+
+
+textarea.input2 {
+    min-height: 115px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+
+}
+.wrap-input2 .input2::placeholder {
+    padding: 5px; /* Ajusta el padding del placeholder dentro del textarea */
+    color: #999;
+    
+  }
+
+
+
+.container-contact2-form-btn {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 13px
+}
+
+.wrap-contact2-form-btn {
+    display: block;
+    position: relative;
+    z-index: 1;
+    border-radius: 2px;
+    width: 100%;
+    overflow: hidden;
+    margin: 0 auto
+}
+
+
+
+.contact2-form-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    background-color: #8dd14d;
+    color: white;
+    border-width: 0;
+}
+
+.validate-input {
+    position: relative
+}
+
 @media (max-width: 576px){
     .container-footer{
         font-size: .8em;
@@ -580,7 +583,6 @@ textarea.input2 {
         margin-bottom: 10px;
     }
 }
-/*----------576PX|768PX----------------*/
 @media (min-width: 577px) and (max-width: 768px){
     .container-footer{
         font-size: .8em;
@@ -598,15 +600,36 @@ textarea.input2 {
         text-align: center;   
     }
 }
-/*----------768PX|992PX----------------*/
-@media (min-width: 769px) and (max-width: 992px){
+@media (min-width: 577px) and (max-width: 992px){
     .container-footer{
         font-size: .8em;
     }
 }
-/*----------993PX|1200PX----------------*/
 @media (min-width: 993px) and (max-width: 1200px){
     .container-footer{
         font-size: .8em;
     }
+}
+
+.container-footer{
+ background-color: #1e5170;
+
+ }
+
+.links-footer{
+    height: 15vh;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    
+}
+.a-links{
+    display: flex;
+    justify-content: space-evenly;
+    padding-left: 2vw;
+    padding-right: 2vw;
+}
+.a-links a{
+    text-decoration: none;
+    color: #fff;
 }
